# restaurant-visitor-eda

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md  mkdocs.yml
getting-started/: index.html
notebooks/: 01_alxdrzd_eda.ipynb  01_eda.ipynb  02_baseline_model.ipynb  03_catboost_baseline_no_validation.ipynb  04_catboost_custom_validation.ipynb  05_catboost_time_series_split.ipynb
reports/: air_store_report.html  df_final.html  df_final_report.html
restaurant_visitor_eda/: __init__.py  dataset.py  features.py  plots.py
restaurant_visitor_eda/modeling/: predict.py  train.py
search/: search_index.json
