[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "restaurant_visitor_eda"
version = "0.0.1"
description = "exploratory data analysis for the restaurant visitors data set for epam mentoring task"
authors = [
  { name = "Alexandr Drozd" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

dependencies = [
    "loguru",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly>=6.7.0",
    "python-dotenv",
    "scikit-learn",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
]

[dependency-groups]
dev =[
    "ipython",
    "ipywidgets>=8.1.8",
    "jupyterlab",
    "kaggle>=1.7.4.5",
    "mkdocs",
    "mkdocs-material>=9.7.6",
    "notebook",
    "pandas-stubs~=2.3.3",
    "ruff",
    "ty>=0.0.32",
    "ydata-profiling>=4.18.4",
]

[tool.ruff]
line-length = 99
src = ["restaurant_visitor_eda"]
include = ["pyproject.toml", "restaurant_visitor_eda/**/*.py"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "ANN"]  

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["restaurant_visitor_eda"]
force-sort-within-sections = true