[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "restaurant_visitor_eda"
version = "0.0.1"
description = "exploratory data analysis for the restaurant visitors data set for epam mentoring task"
authors = [
  { name = "Alexandr Drozd" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

dependencies = [
    "catboost>=1.2.10",
    "loguru",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "python-dotenv",
    "scikit-learn",
    "seaborn",
    "tqdm",
    "typer",
]

[dependency-groups]
dev =[
    "ipython",
    "ipywidgets",
    "jupyterlab",
    "kaggle",
    "mkdocs",
    "mkdocs-material",
    "notebook",
    "pandas-stubs",
    "pre-commit>=4.6.0",
    "ruff",
    "ty",
    "ydata-profiling",
]

[tool.ruff]
line-length = 99
src = ["restaurant_visitor_eda"]
include = ["pyproject.toml", "restaurant_visitor_eda/**/*.py"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["restaurant_visitor_eda"]
force-sort-within-sections = true
